<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiLurikrip</string>
    <string name="hi_lurik">by HiLurik</string>
    <string name="hello_world">Hello world!</string>
    <string name="rule">Aturan pengenalan : Masukan gambar minimal lebar : 100, tinggi : 50, untuk maksimal lebar : 200, tinggi : 100, kemudian masukan nama warna kain lurik minimal 2, dibawah ini (diberi 1 spasi )</string>
    <string name="camera">kamera</string>
    <string name="color_name">nama warna</string>
    <string name="hex_name">nama hex</string>
    <string name="upload">Masukan</string>
    <string name="gallery">Galeri</string>
    <string name="collection">Koleksi</string>
    <string name="glossary">Daftar Istilah</string>
    <string name="tutorial">Panduan</string>
    <string name="about">About</string>
    <string name="profil">Profil Kain Lurik</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="data">Data</string>
    <string name="home">Beranda</string>
    <string name="trainning">Siapkan Data</string>
    <string name="recognition">Kenali</string>
    <string name="developer">Kirim Pesan Ke Pengembang</string>
    <string name="me">subhan.nooriansyah@gmail.com</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_collection">Collection</string>
    <string name="title_activity_developer">Developer</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_segementasi">SegementasiActivity</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="support_by">Di dukung oleh</string>
    <string name="museum_tekstil_jakarta">Museum Teksil Jakarta</string>
    <string name="story_mtj">Museum Tekstil Jakarta adalah salah satu Museum yang menarik yang dapat dikunjungi dijakarta barat setiap bulan selalu ada pameran kain-kain asli karya bangsa indonesia yang dipamerkan dan koleksi yang dimiliki sangat lengkap.</string>

    <!-- Input Activity -->
    <string name="data_image">Data Image</string>
    <string name="sample_image">Sample Image</string>
    <string name="show_image">Tampilkan Citra</string>
    <string name="pakem_image">Lurik Sesuai Pakam</string>
    <string name="menu_sobel">Menu Sobel</string>
    <string name="clear_data">Hapus data</string>
    <string name="menu_input">Menu Input Data</string>
    <string name="edge_process">Deteksi Garis</string>
    <string name="convert">Konversi</string>
    <string name="crop_image">Ambil Sample</string>
    <string name="show_pattern">Tampilkan Deteksi</string>
    <string name="image_processing">Pengolahan Citra</string>
    <string name="input_image"> Masukan Citra</string>
    <string name="save">Simpan</string>
    <string name="id">No</string>
    <string name="type">Jenis</string>
    <string name="pattern">Corak</string>
    <string name="color">Warna</string>
    <string name="philosophy">Falsafah</string>
    <string name="function">Kegunaan</string>
    <string name="place">Tempat</string>
    <string name="note">Ukuran gambar maksimal 250 x 250 dan nilai threshold maksimal = 250, minimum = 0</string>
    <string name="hope">Aplikasi Hilurik dikembangkan untuk melakukan penelitian terhadap kain Lurik yang memiliki keunikan pola yang dapat digunakan untuk melakukan pengenalan pola pada aplikasi mobile yaitu Android </string>

    <!-- Promotion -->
    <string name="promotion1"> "Lurik Hasil Karya Bangsa Indonesia Yang Indah dan Menawan" </string>
    <string name="promotion2"> "Setiap Motif Lurik Memiliki Filosofi yang berbeda" </string>
    <string name="promotion3"> "Lurik Warisan Indonesia untuk Dunia" </string>

    <!-- support -->
    <string name="action_share">Share</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_glossary">GlossaryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="note_2">Sentuh Gambar untuk mengetahui warna lurik</string>

    <string name="search_label">Daftar Istilah</string>
    <string name="search_hint">Mencari Istilah Tentang Lurik</string>

    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_input_color">InputColorActivity</string>
    <string name="title_activity_complete_data">CompleteDataActivity</string>

</resources>