<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ProfilActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
        	android:background="@drawable/bg_museum">
	        
	        <ImageView
	            android:id="@+id/iv_logo_hi_lurik"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginTop="70dp"
	            android:contentDescription="@string/app_name"
	            android:src="@drawable/ic_hilurik" />
	
	        <TextView
	            android:id="@+id/tv_hilurik"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_margin="7dp"
	            android:text="@string/app_name"
	            android:textColor="@color/Yellow"
	            android:textSize="23sp"
	            android:textStyle="bold" />
        
        </LinearLayout>
        
        <TextView
	        android:id="@+id/tv_content"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="5dp"
	        android:text="@string/hope"
	        android:textSize="20sp"/>

    	<TextView
            android:id="@+id/tv_developer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:textStyle="bold"
            android:text="@string/developer"
            android:textSize="20sp"
            android:drawableRight="@drawable/abs__ic_go_search_api_holo_light" />	     

    		<LinearLayout
		        android:id="@+id/ll_message_to_developer"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:visibility="gone"
		        android:orientation="vertical">
		        
		        <TextView
		            android:id="@+id/tv_to_developer"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:gravity="left"
		            android:textStyle="bold"
		            android:text="@string/me"
		            android:textSize="20sp"/>
				
		        <EditText 
		            android:id="@+id/et_subject"
		            android:inputType="textEmailSubject"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:hint="judul"/>
				
		        <EditText 
		            android:id="@+id/et_message"
		            android:inputType="text"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5dp"
		            android:hint="isi pesan"/>
				
		        <Button
		            android:id="@+id/btn_developer"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="7dp"
		            android:onClick="onDeveloper"   
		            android:contentDescription="@string/app_name"
		            android:text="Kirim"/>
	        
	        </LinearLayout>
	   
	    <TextView
            android:id="@+id/tv_support"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:text="@string/support_by"
            android:textStyle="bold"
            android:textSize="20sp" />
	    
	    <Button 
	        android:id="@+id/btn_museum"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:drawableRight="@drawable/logo_mtj"
	        android:text="@string/museum_tekstil_jakarta"
	        android:layout_margin="5dp"
 	        android:onClick="onMuseum"
	        android:contentDescription="@string/app_name"/>
	    
	    <TextView
            android:id="@+id/tv_profil_museum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left"
            android:text="@string/story_mtj"
            android:textSize="20sp" />
	</LinearLayout>
</ScrollView>