<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_title"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	
	<LinearLayout 
	    android:id="@+id/ll_content"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
   
	    <ImageView 
	        android:id="@+id/iv_sample_lurik"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:adjustViewBounds="true"
	        android:layout_margin="3dp"
	        android:layout_gravity="center"
	        android:contentDescription="@string/hi_lurik"/>
	    
	    <ImageView 
	        android:id="@+id/iv_image_lurik"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:scaleType="center"
	        android:layout_margin="5dp"
	        android:layout_gravity="center"
	        android:contentDescription="@string/hi_lurik"/>
	    
	    <Button 
		    android:id="@+id/btn_recognition"
	    	android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onRecognition"
            android:text="@string/recognition"
            android:background="@color/Brown"/>
	    
	    <TextView 
	        android:id="@+id/tv_profile_kain_lurik"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_margin="20dp"
	        android:hint="@string/hello_world"
	        android:padding="5dp"/>
	
	</LinearLayout>
</ScrollView>