<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:overScrollMode="ifContentScrolls">
	
	<LinearLayout
	    android:id="@+id/ll_content_support"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <com.edmodo.cropper.CropImageView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/crop_image_home"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            custom:imageResource="@drawable/bg_lurik" />
	    
	    <ImageView 
	        android:id="@+id/iv_show_image"
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:contentDescription="@string/hi_lurik"/>
            
		<TextView 
		    android:id="@+id/tv_size_image"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_margin="5dp"
		    android:textSize="17sp"
		    android:gravity="center"/>
		
   		<Button
   		    android:id="@+id/btn_crop_home"
   		    android:layout_width="253dp"
   		    android:layout_height="wrap_content"
   		    android:layout_gravity="center"
   		    android:layout_margin="5dp"
   		    android:background="@color/Brown"
   		    android:onClick="onCropImage"
   		    android:text="@string/crop_image"
   		    android:textSize="20sp"
   		    android:textStyle="bold" />
		
		<Button
		    android:id="@+id/btn_image_processing"
		    android:layout_width="254dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_margin="5dp"
		    android:background="@color/Brown"
		    android:onClick="onImageProcessing"
		    android:text="@string/image_processing"
		    android:textSize="20sp"
		    android:textStyle="bold" />
		
	</LinearLayout>    
</ScrollView>


	



